--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,4 +9,5 @@
     <header>
         <a href="/">Home</a>
         <a href="/about">About</a>
+        <a href="/projects">Projects</a>
     </header>
